unpackaged/main/default/objects/EventApi__Registration_Group__c/EventApi__Registration_Group__c.object-meta.xml
<CustomObject>
    <description>Event &quot;Registration Groups&quot; track groups of participants for either corporate registrations, fundraising teams, or family members.</description>
    <label>Registration Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>