unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Account__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** Link to related Account. Required if the Group is defined as a &quot;Corporate Registration Group&quot;.</description>
    <inlineHelpText>** Conditionally Required ** Link to related Account. Required if the Group is defined as a &quot;Corporate Registration Group&quot;.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registration Groups</relationshipLabel>
    <relationshipName>Registration_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>