unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Create_Contacts__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Create_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, a new Contact record will be created for all group members that do not match an existing Contact (email used as the contact match identifier). The Contact will be linked automatically to the Account linked to the group. Defaults checked.</description>
    <inlineHelpText>When checked, a new Contact record will be created for all group members that do not match an existing Contact (email used as the contact match identifier). The Contact will be linked automatically to the Account linked to the group. Defaults checked.</inlineHelpText>
    <label>Create Contacts for Attendees</label>
    <type>Checkbox</type>
</CustomField>