unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Create_Standing_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Create_Standing_Sales_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A &quot;Standing&quot; Sales Order is created allowing group members to register for the Event without providing payment. The Primary Contact will be responsible for the total fees accrued during registration of related group members. Defaults unchecked.</description>
    <inlineHelpText>A &quot;Standing&quot; Sales Order is created allowing group members to register for the Event without providing payment. The Primary Contact will be responsible for the total fees accrued during registration of related group members. Defaults unchecked.</inlineHelpText>
    <label>Create Standing Sales Order</label>
    <type>Checkbox</type>
</CustomField>