unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Display_Registered_Members__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Display_Registered_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Attendees registered with the group will display on the group registration page. Defaults unchecked.</description>
    <inlineHelpText>When checked, Attendees registered with the group will display on the group registration page. Defaults unchecked.</inlineHelpText>
    <label>Display Registered Members</label>
    <type>Checkbox</type>
</CustomField>