unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Enable_Access_Permissions__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Access_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restrict access to the group on registration pages. Unchecked by default.</description>
    <inlineHelpText>Restrict access to the group on registration pages. Unchecked by default.</inlineHelpText>
    <label>Enable Access Permissions</label>
    <type>Checkbox</type>
</CustomField>