unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to related Event.</description>
    <inlineHelpText>** Required ** Link to related Event.</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Registration Groups</relationshipLabel>
    <relationshipName>Registration_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>