unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Group_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Group_Logo_URL__c</fullName>
    <description>Secure (&quot;https://&quot;) url where the group&#39;s logo image file is located.</description>
    <inlineHelpText>Secure (&quot;https://&quot;) url where the group&#39;s logo image file is located.</inlineHelpText>
    <label>Group Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>