unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Invitation_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Invitation_Email_Body__c</fullName>
    <description>Email Body for invitation</description>
    <inlineHelpText>Email Body for invitation</inlineHelpText>
    <label>Invitation Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>