unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Invoice_Date__c</fullName>
    <description>The date to invoice the registration group&#39;s primary contact and/or company.</description>
    <inlineHelpText>The date to invoice the registration group&#39;s primary contact and/or company.</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>