unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Limit_Registrations__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Limit_Registrations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the group size will restricted to the &quot;Registration Limit&quot;. Defaults unchecked.</description>
    <inlineHelpText>When checked, the group size will restricted to the &quot;Registration Limit&quot;. Defaults unchecked.</inlineHelpText>
    <label>Limit Registrations</label>
    <type>Checkbox</type>
</CustomField>