unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A valid Payment Method may be linked to the Registration Group so that the Registration Group is automatically charged for all registration fees for group members the day after the &quot;Sales Closed Date&quot; on the Event.</description>
    <inlineHelpText>A valid Payment Method may be linked to the Registration Group so that the Registration Group is automatically charged for all registration fees for group members the day after the &quot;Sales Closed Date&quot; on the Event.</inlineHelpText>
    <label>Payment Method</label>
    <referenceTo>OrderApi__Payment_Method__c</referenceTo>
    <relationshipLabel>Registration Groups</relationshipLabel>
    <relationshipName>Registration_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>