unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Payment_Status__c</fullName>
    <description>** System Calculated ** The current status of payment for the Registration Group.</description>
    <inlineHelpText>** System Calculated ** The current status of payment for the Registration Group.</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Payment Processed</fullName>
            </value>
            <value>
                <fullName>Payment Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>