unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Payment_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** Select the payment terms to use for the registration group&#39;s invoice. Required if posting entity is set to &quot;Invoice&quot;.</description>
    <inlineHelpText>** Conditionally Required ** Select the payment terms to use for the registration group&#39;s invoice. Required if posting entity is set to &quot;Invoice&quot;.</inlineHelpText>
    <label>Payment Terms</label>
    <referenceTo>OrderApi__Payment_Terms__c</referenceTo>
    <relationshipLabel>Registration Groups</relationshipLabel>
    <relationshipName>Registration_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>