unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Payment_Type__c</fullName>
    <description>Registration Groups can pay for all group members at once either by Invoice or automatic Payment Method charge.</description>
    <inlineHelpText>Registration Groups can pay for all group members at once either by Invoice or automatic Payment Method charge.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
                <default>true</default>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>Payment Method</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>