unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Posting_Entity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Posting_Entity__c</fullName>
    <description>Select either Invoice or Receipt. Valid and restricted to Registration Groups where &quot;Create Standing Sales Order&quot; is checked.</description>
    <inlineHelpText>Select either Invoice or Receipt. Valid and restricted to Registration Groups where &quot;Create Standing Sales Order&quot; is checked.</inlineHelpText>
    <label>Posting Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>