unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to related Primary Contact. Derived from the related Account&#39;s &quot;Primary Contact&quot;.</description>
    <inlineHelpText>** System Calculated Override ** Link to related Primary Contact. Derived from the related Account&#39;s &quot;Primary Contact&quot;.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Registration Groups (Primary Contact) Do Not Display</relationshipLabel>
    <relationshipName>Registration_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>