unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Registered_Attendees__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registered_Attendees__c</fullName>
    <defaultValue>0</defaultValue>
    <description>** System Calculated ** Count of &quot;Registered&quot; Attendees related to the Registration Group.</description>
    <inlineHelpText>** System Calculated ** Count of &quot;Registered&quot; Attendees related to the Registration Group.</inlineHelpText>
    <label>Registered Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>