unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Registration_Code__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Code__c</fullName>
    <description>** System Calculated External ID ** Auto Number &quot;External ID&quot; that allows a group to be &quot;private&quot; and only accessible with a &quot;Registration Code&quot;.</description>
    <displayFormat>{0000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>** System Calculated External ID ** Auto Number &quot;External ID&quot; that allows a group to be &quot;private&quot; and only accessible with a &quot;Registration Code&quot;.</inlineHelpText>
    <label>Registration Code</label>
    <type>AutoNumber</type>
</CustomField>