unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Registration_Instructions__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Instructions__c</fullName>
    <description>Custom instructions to display on the Group Registration page.</description>
    <inlineHelpText>Custom instructions to display on the Group Registration page.</inlineHelpText>
    <label>Registration Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>