unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Registration_Limit__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Limit__c</fullName>
    <description>The maximum number of Attendees allowed to register with the group. Required and restricted to Registration Groups where &quot;Limit Registrations&quot; is checked.</description>
    <inlineHelpText>The maximum number of Attendees allowed to register with the group. Required and restricted to Registration Groups where &quot;Limit Registrations&quot; is checked.</inlineHelpText>
    <label>Registration Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>