unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/EventApi__Registration_Page_Header__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Page_Header__c</fullName>
    <description>The header content to insert into the group&#39;s registration page.</description>
    <inlineHelpText>The header content to insert into the group&#39;s registration page.</inlineHelpText>
    <label>Registration Page Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>