unpackaged/main/default/objects/EventApi__Registration_Group__c/fields/LTE__Invited_Attendee__c.field-meta.xml
<CustomField>
    <fullName>LTE__Invited_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contains Invited Attendee reference for RSVP Event</description>
    <label>Invited Attendee</label>
    <referenceTo>EventApi__Attendee__c</referenceTo>
    <relationshipLabel>Registration Groups</relationshipLabel>
    <relationshipName>Registration_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>