unpackaged/main/default/objects/EventApi__Registration_Group__c/listViews/EventApi__All.listView-meta.xml
<ListView>
    <fullName>EventApi__All</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Event__c</columns>
    <columns>EventApi__Account__c</columns>
    <columns>EventApi__Primary_Contact__c</columns>
    <columns>EventApi__Registered_Attendees__c</columns>
    <columns>EventApi__Create_Standing_Sales_Order__c</columns>
    <columns>EventApi__Payment_Type__c</columns>
    <columns>EventApi__Payment_Status__c</columns>
    <columns>EventApi__Posting_Entity__c</columns>
    <columns>EventApi__Payment_Method__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>